@@ -10,3 +10,4 @@
 /weekly_evictions/create.sql
 /weekly_evictions/add_column_geo_id.sql
 /weekly_evictions/add_column_county.sql
+/county_location_data/create.sql
